cpp/test/Slice/errorDetection/RedefinitionAsEnumerator.err
RedefinitionAsEnumerator.ice:13 error: redefinition of `Vector' as enumerator
RedefinitionAsEnumerator.ice:13 error: redefinition of `Class' as enumerator
