cpp/test/Slice/errorDetection/RedefinitionAsEnumerator.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class Class { };
vector<int> Vector;
enum Enum { Class, Vector };
